--- a/Meditator/Base.lproj/Main_iPhone.storyboard
+++ b/Meditator/Base.lproj/Main_iPhone.storyboard
@@ -191,10 +191,14 @@
                                     <segue destination="Z4Y-Ec-zW9" kind="unwind" identifier="ReturnToSettings" unwindAction="returningFromTimer:" id="8DM-V2-FZk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7oL-HZ-8L1">
-                                <rect key="frame" x="20" y="269" width="280" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7oL-HZ-8L1">
+                                <rect key="frame" x="138" y="262" width="44" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Pause">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="aae-yQ-zgF"/>
+                                    <constraint firstAttribute="height" constant="44" id="gfw-Vs-qq6"/>
+                                </constraints>
+                                <state key="normal" title="pause">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -202,8 +206,8 @@
                                     <action selector="pause:" destination="DEm-Dj-T69" eventType="touchUpInside" id="s38-PL-9PV"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Begin!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-DM-UmW" customClass="MorphingTimerLabel">
-                                <rect key="frame" x="136" y="369" width="49" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="begin!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-DM-UmW" customClass="MorphingTimerLabel">
+                                <rect key="frame" x="136" y="369" width="48" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -214,17 +218,17 @@
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="TZR-DM-UmW" secondAttribute="centerX" id="1B2-LO-oFD"/>
                             <constraint firstItem="J2G-Hd-VpK" firstAttribute="top" secondItem="5H5-0d-1vW" secondAttribute="bottom" constant="20" id="2f8-1v-KvQ"/>
-                            <constraint firstAttribute="trailing" secondItem="7oL-HZ-8L1" secondAttribute="trailing" constant="20" symbolic="YES" id="81h-xP-3xX"/>
                             <constraint firstAttribute="centerX" secondItem="WXo-oD-0w3" secondAttribute="centerX" id="8hM-eU-Nd9"/>
                             <constraint firstAttribute="centerX" secondItem="5H5-0d-1vW" secondAttribute="centerX" id="J45-KO-0sO"/>
                             <constraint firstItem="TZR-DM-UmW" firstAttribute="top" secondItem="WXo-oD-0w3" secondAttribute="bottom" constant="40" id="LhZ-AY-JpA"/>
                             <constraint firstAttribute="centerY" secondItem="WXo-oD-0w3" secondAttribute="centerY" id="M7J-ro-noX"/>
                             <constraint firstAttribute="centerY" secondItem="7oL-HZ-8L1" secondAttribute="centerY" id="SRE-wH-Sxy"/>
-                            <constraint firstItem="7oL-HZ-8L1" firstAttribute="leading" secondItem="cQx-BL-OXo" secondAttribute="leading" constant="20" symbolic="YES" id="d5Z-JX-dyQ"/>
+                            <constraint firstAttribute="centerX" secondItem="7oL-HZ-8L1" secondAttribute="centerX" id="eBL-9J-yOy"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backgroundImageView" destination="Rsj-sJ-byL" id="4W3-4b-myB"/>
+                        <outlet property="endButton" destination="5H5-0d-1vW" id="S49-WK-5p9"/>
                         <outlet property="pauseButton" destination="7oL-HZ-8L1" id="SM4-WT-0o3"/>
                         <outlet property="statusLabel" destination="TZR-DM-UmW" id="0KI-GZ-VIE"/>
                         <outlet property="timerView" destination="WXo-oD-0w3" id="Oyv-oT-hKH"/>
