--- a/Meditator/Base.lproj/Main_iPhone.storyboard
+++ b/Meditator/Base.lproj/Main_iPhone.storyboard
@@ -172,7 +172,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WXo-oD-0w3" customClass="TimerView">
-                                <rect key="frame" x="85" y="239" width="150" height="90"/>
+                                <rect key="frame" x="85" y="219" width="150" height="90"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -181,7 +181,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5H5-0d-1vW">
-                                <rect key="frame" x="145" y="518" width="30" height="30"/>
+                                <rect key="frame" x="20" y="518" width="280" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="end">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -192,7 +192,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7oL-HZ-8L1">
-                                <rect key="frame" x="138" y="262" width="44" height="44"/>
+                                <rect key="frame" x="138" y="242" width="44" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="aae-yQ-zgF"/>
@@ -206,8 +206,8 @@
                                     <action selector="pause:" destination="DEm-Dj-T69" eventType="touchUpInside" id="s38-PL-9PV"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="begin!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-DM-UmW" customClass="MorphingTimerLabel">
-                                <rect key="frame" x="136" y="369" width="48" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="begin" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-DM-UmW" customClass="MorphingTimerLabel">
+                                <rect key="frame" x="139" y="349" width="43" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -218,12 +218,14 @@
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="TZR-DM-UmW" secondAttribute="centerX" id="1B2-LO-oFD"/>
                             <constraint firstItem="J2G-Hd-VpK" firstAttribute="top" secondItem="5H5-0d-1vW" secondAttribute="bottom" constant="20" id="2f8-1v-KvQ"/>
+                            <constraint firstItem="WXo-oD-0w3" firstAttribute="centerY" secondItem="7oL-HZ-8L1" secondAttribute="centerY" id="7Bf-YL-K3N"/>
                             <constraint firstAttribute="centerX" secondItem="WXo-oD-0w3" secondAttribute="centerX" id="8hM-eU-Nd9"/>
                             <constraint firstAttribute="centerX" secondItem="5H5-0d-1vW" secondAttribute="centerX" id="J45-KO-0sO"/>
                             <constraint firstItem="TZR-DM-UmW" firstAttribute="top" secondItem="WXo-oD-0w3" secondAttribute="bottom" constant="40" id="LhZ-AY-JpA"/>
-                            <constraint firstAttribute="centerY" secondItem="WXo-oD-0w3" secondAttribute="centerY" id="M7J-ro-noX"/>
-                            <constraint firstAttribute="centerY" secondItem="7oL-HZ-8L1" secondAttribute="centerY" id="SRE-wH-Sxy"/>
-                            <constraint firstAttribute="centerX" secondItem="7oL-HZ-8L1" secondAttribute="centerX" id="eBL-9J-yOy"/>
+                            <constraint firstAttribute="centerY" secondItem="WXo-oD-0w3" secondAttribute="centerY" constant="20" id="M7J-ro-noX"/>
+                            <constraint firstItem="5H5-0d-1vW" firstAttribute="leading" secondItem="cQx-BL-OXo" secondAttribute="leading" constant="20" symbolic="YES" id="Z1c-2Q-hWW"/>
+                            <constraint firstItem="WXo-oD-0w3" firstAttribute="centerX" secondItem="7oL-HZ-8L1" secondAttribute="centerX" id="cQN-uF-CM1"/>
+                            <constraint firstAttribute="trailing" secondItem="5H5-0d-1vW" secondAttribute="trailing" constant="20" symbolic="YES" id="tb7-gc-BkQ"/>
                         </constraints>
                     </view>
                     <connections>
